force-app/main/default/objects/Interrogation__c/Interrogation__c.object-meta.xml
<CustomObject>
    <label>Interrogation</label>
    <nameField>
        <displayFormat>Int-{0000}</displayFormat>
        <label>Interrogation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interrogations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>