force-app/main/default/objects/Interrogation__c/fields/Pick_Values__c.field-meta.xml
<CustomField>
    <fullName>Pick_Values__c</fullName>
    <label>Pick Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>